<resources>
    <string name="app_name">CountdownExtra</string>
    <string name="MinuteHint">0</string>
    <string name="Start">Start</string>
    <string name="Minutes">Minutes</string>
    <string name="TimeFormat">00:00:00</string>
    <string name="Pause">Pause</string>
    <string name="Set">Set</string>
    <string name="Reset">Reset</string>
    <string name="Reset_db">Clear daily records</string>
    <string name="Reset_less">Clear worse times</string>
</resources>
