<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/input_minutes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/countdown"
        android:fontFamily="sans-serif"
        android:autofillHints="@string/MinuteHint"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:hint="@string/Minutes"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignTop="@+id/input_minutes"
        android:layout_toEndOf="@+id/input_minutes"
        android:text="@string/Set" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/TimeFormat"
        android:textColor="@android:color/black"
        android:textSize="60sp" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/countdown"
        android:layout_centerHorizontal="true"
        android:text="@string/Start" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdown"
        android:layout_marginStart="11dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimaryDark"
        android:layout_toEndOf="@+id/button_start_pause"
        android:text="@string/Reset"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>